# nuillu

./: .gitignore  AGENTS.md  Cargo.toml  Eure.eure  README.md
configs/: policy-reinforcement.eure  time-division.eure  time-division.toml
configs/modelsets/: eval-gpt5.4.eure  eval-haiku.eure  eval-ollama.eure  eval-openai-embedding.eure
crates/adapters/in-memory/: Cargo.toml
crates/adapters/in-memory/src/: lib.rs
crates/adapters/lancedb/: Cargo.toml
crates/adapters/lancedb-core/: Cargo.toml
crates/adapters/lancedb/src/: lib.rs  schema.rs
crates/adapters/libsql/: Cargo.toml  build.rs
crates/adapters/libsql/migrations/current/: dev.eure  metadata.sql  released.eure  snapshot.sql
crates/adapters/libsql/migrations/current/dev/: v0.1.allocation-snapshots.sql  v0.1.cognition-log-origin.sql  v0.1.cognition-log.sql  v0.1.external-action-events.sql  v0.1.initial-agent-schema.sql  v0.1.llm-transcripts.sql  v0.1.memo-log.sql  v0.1.recent-activity-traces.sql
crates/adapters/libsql/src/: lib.rs  migrations.rs
crates/adapters/local-memory/: Cargo.toml
crates/adapters/local-memory/src/: lib.rs
crates/adapters/model2vec/: Cargo.toml
crates/adapters/model2vec/src/: lib.rs
crates/adapters/openai-embedding/: Cargo.toml
crates/adapters/openai-embedding/src/: lib.rs
crates/agent/: Cargo.toml
crates/agent/src/: event_loop.rs  kicks.rs  lib.rs  scheduler.rs  testing.rs
crates/agent/tests/: two_module_loop.rs
crates/blackboard/: Cargo.toml
crates/blackboard/src/: allocation.rs  attention_stream.rs  cognition_log.rs  command.rs  interoception.rs  lib.rs  memory.rs  policy.rs  state.rs  vital.rs
crates/eval/: Cargo.toml
crates/eval/src/: artifact.rs  cases.rs  evaluation.rs  gui.rs  judge.rs  lib.rs  live.rs  main.rs  model_set.rs  runner.rs  state_dump.rs  trace_json.rs
crates/eval/tests/: eval_cases.rs
crates/llm-trace-file/: Cargo.toml
crates/llm-trace-file/src/: lib.rs
crates/module/: Cargo.toml
crates/module/src/: action.rs  activation.rs  activation_gate.rs  allocation_persistence.rs  allocation_writer.rs  attention.rs  capabilities.rs  channels.rs  cognition.rs  dependencies.rs  factory.rs  interoception.rs  lib.rs  llm.rs  memo.rs  memo_persistence.rs  memory_caps.rs  memory_render.rs  mind_format.rs  mind_session.rs  periodic.rs  policy_caps.rs  ports.rs  prompt.rs  rate_limit.rs  readers.rs  runtime_events.rs  runtime_policy.rs  scene.rs  session.rs  session_compaction.rs  test_support.rs  tiers.rs  time_division.rs  tool_text_guard.rs  tool_trace.rs  trait.rs  utterance.rs  vital.rs
crates/modules/action/: Cargo.toml
crates/modules/allocation/: Cargo.toml
crates/modules/allocation-controller/: Cargo.toml
crates/modules/attention-gate/: Cargo.toml
crates/modules/memory/: Cargo.toml
crates/modules/memory/src/: association.rs  batch.rs  common.rs  compaction.rs  dreaming.rs  lib.rs  memory.rs  query.rs  recombination.rs  store.rs
crates/modules/query-policy/: Cargo.toml
crates/modules/query-policy/src/: lib.rs
crates/modules/reward/: Cargo.toml
crates/modules/reward/src/: compaction.rs  estimation.rs  lib.rs  policy.rs  query.rs  reward.rs
crates/modules/self-model/: Cargo.toml
crates/modules/self-model/src/: batch.rs  lib.rs
crates/modules/value-estimator/: Cargo.toml
crates/modules/value-estimator/src/: lib.rs
crates/modules/vital/: Cargo.toml
crates/modules/vital/src/: lib.rs
crates/server/: Cargo.toml
crates/server/src/: commands.rs  config.rs  environment.rs  gui.rs  history.rs  lib.rs  llm_db_trace.rs  llm_observer.rs  main.rs  memory_seed.rs  model_set.rs  registry.rs  runtime.rs  runtime_event_log.rs  snapshot.rs  state.rs
crates/types/: Cargo.toml
crates/visualizer-egui/: Cargo.toml
crates/visualizer-egui/i18n/en-US/: app.ftl
crates/visualizer-egui/i18n/ja-JP/: app.ftl
crates/visualizer-egui/src/: blackboard.rs  chat.rs  cognition.rs  errors.rs  i18n.rs  lib.rs  llm_chat.rs  main.rs  memories.rs  memos.rs  module_filter.rs  resource_monitor.rs  text.rs  time.rs  window.rs
crates/visualizer-egui/src/modules/: mod.rs  query_memory.rs
crates/visualizer-protocol/: Cargo.toml
crates/visualizer-protocol/src/: lib.rs
docs/: eval-modules.md  lutum-bug-report-2026-05-08.md
docs/design/: attention-schema.md  capability-rate-limiting.md  implementation-design.md  memory-ledger.md
docs/devlog/: 2026-05-21-speak-module-speech-content.eure  2026-06-04-server-greeting-no-response-investigation.eure  2026-06-07-allocation-schema-probe.eure  2026-06-07-speak-planning-probe.eure
eval-cases/full-agent/: current-request.eure  dog-peer-food-boundary.eure  eval-triage.eure  imagine-tiger-in-head.eure  interesting-story-request.eure  memory-confirmation-phrase.eure  memory-self-model.eure  memory-world-model.eure  multimodal-greeting.eure  no-evidence-decline-confabulation.eure  own-body-simple-report.eure  peer-signal-freeze-strike.eure  peer-stress-response.eure  play-signal-response.eure  responds-to-peer-greeting.eure  self-model-specific-ability.eure  sleep-after-sensory-quiet.eure  surprise-on-prediction-violation.eure  torus-route-explanation.eure  wake-from-sleep-on-salient-sensory.eure  world-rule-bright-water-poison.eure
eval-cases/smoke/: greeting.eure  memory-identity.eure
schemas/: eval-action-case.schema.eure  eval-allocation-case.schema.eure  eval-allocation-controller-case.schema.eure  eval-attention-schema-case.schema.eure  eval-case.schema.eure  eval-cognition-gate-case.schema.eure  eval-common.schema.eure  eval-full-agent-case.schema.eure  eval-full-agent-last-state.schema.eure  eval-memory-case.schema.eure  eval-model-set.schema.eure  eval-poet-case.schema.eure  eval-policy-case.schema.eure  eval-policy-compaction-case.schema.eure  eval-predict-case.schema.eure  eval-query-agentic-case.schema.eure  eval-query-memory-case.schema.eure  eval-query-vector-case.schema.eure  eval-self-model-case.schema.eure  eval-sensory-case.schema.eure  eval-sleep-case.schema.eure  eval-speak-case.schema.eure  eval-surprise-case.schema.eure  server-config.schema.eure  server-memory-seeds.schema.eure
(+124 files in other folders)
