[workspace]
resolver = "3"
members = [
    "crates/types",
    "crates/blackboard",
    "crates/module",
    "crates/agent",
    "crates/adapters/in-memory",
    "crates/adapters/libsql",
    "crates/adapters/model2vec",
    "crates/adapters/openai-embedding",
    "crates/modules/*",
    "crates/eval",
    "crates/visualizer-egui",
    "crates/visualizer-protocol",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"
repository = "https://github.com/Hihaheho/nuillu"
publish = false

[workspace.lints.rust]
unsafe_code = "forbid"
unused_must_use = "warn"

[workspace.lints.clippy]
dbg_macro = "warn"

[workspace.dependencies]
lutum = { git = "https://github.com/Hihaheho/lutum" }
lutum-protocol = { git = "https://github.com/Hihaheho/lutum" }
lutum-eval = { git = "https://github.com/Hihaheho/lutum" }
lutum-openai = { git = "https://github.com/Hihaheho/lutum" }
lutum-trace = { git = "https://github.com/Hihaheho/lutum" }

async-trait = "0.1"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
futures = "0.3"
libsql = { version = "0.9.30", default-features = false, features = ["core"] }
model2vec-rs = { version = "0.1.4", default-features = false, features = ["onig"] }
schemars = { version = "1", features = ["chrono04"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", default-features = false, features = ["sync", "time", "rt", "macros"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["v4", "v7", "serde"] }
eure = "0.1.6"
eure-document = "0.1.9"
eure-fmt = "0.1.9"
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# workspace-internal crates
nuillu-types = { path = "crates/types" }
nuillu-blackboard = { path = "crates/blackboard" }
nuillu-module = { path = "crates/module" }
nuillu-agent = { path = "crates/agent" }
lutum-in-memory-adapter = { path = "crates/adapters/in-memory" }
lutum-libsql-adapter = { path = "crates/adapters/libsql" }
lutum-model2vec-adapter = { path = "crates/adapters/model2vec" }
nuillu-openai-embedding-adapter = { path = "crates/adapters/openai-embedding" }

nuillu-cognition-gate = { path = "crates/modules/cognition-gate" }
nuillu-attention-controller = { path = "crates/modules/attention-controller" }
nuillu-attention-schema = { path = "crates/modules/attention-schema" }
nuillu-self-model = { path = "crates/modules/self-model" }
nuillu-query-vector = { path = "crates/modules/query-vector" }
nuillu-query-policy = { path = "crates/modules/query-policy" }
nuillu-query-agentic = { path = "crates/modules/query-agentic" }
nuillu-memory = { path = "crates/modules/memory" }
nuillu-memory-compaction = { path = "crates/modules/memory-compaction" }
nuillu-policy = { path = "crates/modules/policy" }
nuillu-value-estimator = { path = "crates/modules/value-estimator" }
nuillu-reward = { path = "crates/modules/reward" }
nuillu-predict = { path = "crates/modules/predict" }
nuillu-surprise = { path = "crates/modules/surprise" }
nuillu-sensory = { path = "crates/modules/sensory" }
nuillu-speak = { path = "crates/modules/speak" }
nuillu-eval = { path = "crates/eval" }
nuillu-visualizer-protocol = { path = "crates/visualizer-protocol" }
