[workspace]
resolver = "3"
members = [
    "crates/types",
    "crates/blackboard",
    "crates/module",
    "crates/agent",
    "crates/adapters/in-memory",
    "crates/adapters/libsql",
    "crates/adapters/openai-embedding",
    "crates/llm-trace-file",
    "crates/modules/*",
    "crates/eval",
    "crates/server",
    "crates/visualizer-egui",
    "crates/visualizer-protocol",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"
repository = "https://github.com/Hihaheho/nuillu"
publish = false

[workspace.lints.rust]
unsafe_code = "forbid"
unused_must_use = "warn"

[workspace.lints.clippy]
dbg_macro = "warn"

[workspace.dependencies]
lutum = { git = "https://github.com/Hihaheho/lutum" }
lutum-protocol = { git = "https://github.com/Hihaheho/lutum" }
lutum-eval = { git = "https://github.com/Hihaheho/lutum" }
lutum-eval-runner = { git = "https://github.com/Hihaheho/lutum" }
lutum-openai = { git = "https://github.com/Hihaheho/lutum" }
lutum-trace = { git = "https://github.com/Hihaheho/lutum" }

async-trait = "0.1"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
futures = "0.3"
libsql = { version = "0.9.30", default-features = false, features = ["core"] }
schemars = { version = "1", features = ["chrono04"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", default-features = false, features = ["sync", "time", "rt", "macros"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["v4", "v7", "serde"] }
eure = { git = "https://github.com/Hihaheho/eure" }
eure-document = { git = "https://github.com/Hihaheho/eure" }
eure-fmt = { git = "https://github.com/Hihaheho/eure" }
eure-json = { git = "https://github.com/Hihaheho/eure" }
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.13", features = ["json"] }

# workspace-internal crates
nuillu-types = { path = "crates/types" }
nuillu-blackboard = { path = "crates/blackboard" }
nuillu-module = { path = "crates/module" }
nuillu-agent = { path = "crates/agent" }
lutum-in-memory-adapter = { path = "crates/adapters/in-memory" }
lutum-libsql-adapter = { path = "crates/adapters/libsql" }
nuillu-openai-embedding-adapter = { path = "crates/adapters/openai-embedding" }
nuillu-llm-trace-file = { path = "crates/llm-trace-file" }

nuillu-cognition-gate = { path = "crates/modules/cognition-gate" }
nuillu-allocation = { path = "crates/modules/allocation" }
nuillu-action = { path = "crates/modules/action" }
nuillu-attention-schema = { path = "crates/modules/attention-schema" }
nuillu-interpreter = { path = "crates/modules/interpreter" }
nuillu-self-model = { path = "crates/modules/self-model" }
nuillu-memory = { path = "crates/modules/memory" }
nuillu-interoception = { path = "crates/modules/interoception" }
nuillu-homeostasis = { path = "crates/modules/homeostasis" }
nuillu-reward = { path = "crates/modules/reward" }
nuillu-predict = { path = "crates/modules/predict" }
nuillu-surprise = { path = "crates/modules/surprise" }
nuillu-sensory = { path = "crates/modules/sensory" }
nuillu-speak = { path = "crates/modules/speak" }
nuillu-visualizer-protocol = { path = "crates/visualizer-protocol" }
nuillu-server = { path = "crates/server" }
