[package]
name = "nuillu-eval"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true }
eure = { workspace = true }
eure-document = { workspace = true }
eure-fmt = { workspace = true }
lutum = { workspace = true }
lutum-eval = { workspace = true }
lutum-in-memory-adapter = { workspace = true }
lutum-libsql-adapter = { workspace = true }
lutum-model2vec-adapter = { workspace = true }
lutum-openai = { workspace = true }
lutum-trace = { workspace = true }
nuillu-agent = { workspace = true }
nuillu-attention-controller = { workspace = true }
nuillu-attention-schema = { workspace = true }
nuillu-blackboard = { workspace = true }
nuillu-memory = { workspace = true }
nuillu-memory-compaction = { workspace = true }
nuillu-policy = { workspace = true }
nuillu-module = { workspace = true }
nuillu-predict = { workspace = true }
nuillu-query-agentic = { workspace = true }
nuillu-query-policy = { workspace = true }
nuillu-query-vector = { workspace = true }
nuillu-reward = { workspace = true }
nuillu-sensory = { workspace = true }
nuillu-self-model = { workspace = true }
nuillu-speak = { workspace = true }
nuillu-cognition-gate = { workspace = true }
nuillu-surprise = { workspace = true }
nuillu-value-estimator = { workspace = true }
nuillu-types = { workspace = true }
nuillu-visualizer-protocol = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
tempfile = "3"
