[package]
name = "nuillu-llm-trace-file"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
chrono = { workspace = true }
lutum = { workspace = true }
nuillu-module = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
nuillu-types = { workspace = true }
tempfile = "3"
tokio = { workspace = true }
