[package]
name = "nuillu-visualizer-egui"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[[bin]]
name = "nuillu-visualizer-gui"
path = "src/main.rs"

[[bin]]
name = "visualizer"
path = "src/bin/visualizer.rs"

[dependencies]
chrono = { workspace = true }
eframe = { version = "0.34.2", features = ["persistence"] }
egui = "0.34.2"
egui_hooks = { version = "0.11.0", features = ["persistence"] }
nuillu-module = { workspace = true }
nuillu-types = { workspace = true }
nuillu-visualizer-protocol = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
