[package]
name = "lutum-lancedb-adapter"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
nuillu-module = { workspace = true }
nuillu-types = { workspace = true }

async-trait = { workspace = true }
arrow-array = { workspace = true }
arrow-schema = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
lancedb = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
