[package]
name = "lutum-libsql-adapter"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
nuillu-module = { workspace = true }
nuillu-types = { workspace = true }

async-trait = { workspace = true }
chrono = { workspace = true }
libsql = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
