[package]
name = "lutum-libsql-adapter"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
nuillu-memory = { workspace = true }
nuillu-module = { workspace = true }
nuillu-reward = { workspace = true }
nuillu-types = { workspace = true }

async-trait = { workspace = true }
chrono = { workspace = true }
eure = { workspace = true }
libsql = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }

[build-dependencies]
eure = { workspace = true }
