[package]
name = "lutum-local-memory-adapter"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
nuillu-module = { workspace = true }
nuillu-types = { workspace = true }

async-trait = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
chrono = { workspace = true }
