[package]
name = "nuillu-openai-embedding-adapter"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
nuillu-module = { workspace = true }

async-trait = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
