[package]
name = "nuillu-reward"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
nuillu-module = { workspace = true }
nuillu-types = { workspace = true }

anyhow = { workspace = true }
async-trait = { workspace = true }
eure = { workspace = true }
lutum = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
