[package]
name = "nuillu-self-model"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
nuillu-module = { workspace = true }
nuillu-types = { workspace = true }

anyhow = { workspace = true }
async-trait = { workspace = true }
lutum = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
