[package]
name = "nuillu-value-estimator"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
nuillu-module = { workspace = true }
nuillu-types = { workspace = true }

anyhow = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
