[package]
name = "nuillu-vital"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
nuillu-blackboard = { workspace = true }
nuillu-module = { workspace = true }
nuillu-types = { workspace = true }

anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
